--- a/Msafe/MSafe/bin/AndroidManifest.xml
+++ b/Msafe/MSafe/bin/AndroidManifest.xml
@@ -40,6 +40,9 @@
           <activity
             android:name="org.com.lix_.ui.SceneOfVirusAdmin"
             android:label="@string/app_name" />
+          <activity
+            android:name="org.com.lix_.ui.SceneOfRootAdmin"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
