--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="8" />
 
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -31,19 +34,19 @@
         <activity
             android:name="org.com.lix_.ui.SceneOfFileAdmin"
             android:label="@string/app_name" />
-         <activity
+        <activity
             android:name="org.com.lix_.ui.SceneOfApkAdmin"
             android:label="@string/app_name" />
-         <activity
+        <activity
             android:name="org.com.lix_.ui.SceneOfWapAdmin"
             android:label="@string/app_name" />
-          <activity
+        <activity
             android:name="org.com.lix_.ui.SceneOfVirusAdmin"
             android:label="@string/app_name" />
-          <activity
+        <activity
             android:name="org.com.lix_.ui.SceneOfRootAdmin"
             android:label="@string/app_name" />
-            <activity
+        <activity
             android:name="org.com.lix_.ui.SceneOfPowerAdmin"
             android:label="@string/app_name" />
     </application>
