--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -52,6 +52,15 @@
         <activity
             android:name="org.com.lix_.ui.SceneOfPowerAdmin"
             android:label="@string/app_name" />
+        <activity
+            android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="org.com.lix_.ui.tabchildrootstart" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
