--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -54,11 +54,10 @@
             android:label="@string/app_name" />
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
+            android:theme="@android:style/Holo.ButtonBar"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="org.com.lix_.ui.tabchildrootstart" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
