--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
-            android:theme="@android:style/Holo.ButtonBar"
+            android:theme="@android:style/Holo.Light.ButtonBar"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="org.com.lix_.ui.tabchildrootstart" />
