--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -29,6 +29,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="org.com.lix_.ui.TestView"
+            android:label="@string/app_name" >
+            
+        </activity>
+        <activity
             android:name="org.com.lix_.ui.SceneOfRubbishClear"
             android:label="@string/app_name" />
         <activity
@@ -54,8 +59,8 @@
             android:label="@string/app_name" />
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
-            android:theme="@android:style/Holo.Light.ButtonBar"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Holo.Light.ButtonBar" >
             <intent-filter>
                 <action android:name="org.com.lix_.ui.tabchildrootstart" />
             </intent-filter>
