--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -24,7 +24,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -53,6 +52,9 @@
             android:label="@string/app_name" />
         <activity
             android:name="org.com.lix_.ui.SceneOfRootAdmin"
+            android:label="@string/app_name" />
+        <activity
+            android:name="org.com.lix_.ui.SceneOfSettingRubbishClear"
             android:label="@string/app_name" />
         <activity
             android:name="org.com.lix_.ui.SceneOfPowerAdmin"
