--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -59,6 +59,8 @@
         <activity
             android:name="org.com.lix_.ui.SceneOfPowerAdmin"
             android:label="@string/app_name" />
+        <activity android:name="org.com.lix_.ui.SceneOfSettingWapAdmin" >
+        </activity>
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
             android:label="@string/app_name"
