MSafe ui基础完成，后面需要美化功能，开启新的模块

--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -64,6 +64,8 @@
         </activity>
         <activity android:name="org.com.lix_.ui.SceneOfSettingVirvus" >
         </activity>
+         <activity android:name="org.com.lix_.ui.SceneOfSettingPoweradmin" >
+        </activity>
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
             android:label="@string/app_name"
