--- a/Msafe/MSafe/AndroidManifest.xml
+++ b/Msafe/MSafe/AndroidManifest.xml
@@ -13,7 +13,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+  <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -64,7 +65,7 @@
         </activity>
         <activity android:name="org.com.lix_.ui.SceneOfSettingVirvus" >
         </activity>
-         <activity android:name="org.com.lix_.ui.SceneOfSettingPoweradmin" >
+        <activity android:name="org.com.lix_.ui.SceneOfSettingPoweradmin" >
         </activity>
         <activity
             android:name="org.com.lix_.ui.TabChildSceneOfRootStart"
@@ -72,6 +73,13 @@
             android:theme="@android:style/Holo.Light.ButtonBar" >
             <intent-filter>
                 <action android:name="org.com.lix_.ui.tabchildrootstart" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ShutcutDemo"
+            android:theme="@style/Transparent" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
